--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,34 @@
 server:
   port: 9000
+  servlet:
+    contextPath: /api/v1
 
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./h2/db
-    username: sa
-    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/mysql
+    username: @username@
+    password: @password@
   h2:
     console:
       enabled: true
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate:
       ddl-auto: create
   application:
-    name:
+    name: visitor-service
 
 queue:
-  fifo: arevalo.fifo
+  visitors: @queue@
 
 path:
   api: /api/v1
 
 cloud:
-  region:
-    static: us-east-1
+  aws:
+    credentials:
+      access-key: @accessKey@
+      secret-key: @secretKey@
+    region:
+      static: us-east-1
